# PLDM_franka_emika_panda

./: .gitignore  MUJOCO_LOG.TXT  nohup.out  panda.urdf  pyproject.toml  pyrightconfig.json
pldm/: configs.py  logger.py  nohup.out  train.py
pldm/checkpoints/test/: config.yaml  log.json  summary.json
pldm/checkpoints/test/wandb/: latest-run
pldm/configs/franka/: 5pr_1ep_100t.yaml  pairs_3_ep_1_timestep_100.yaml  pairs_5_ep_1_timestep_100.yaml  pairs_5_ep_2000_timestep_100.yaml
pldm/data/: dataset_factory.py  enums.py  utils.py
pldm/evaluation/: evaluator.py
pldm/models/: hjepa.py  jepa.py  misc.py  predictors.py  utils.py
pldm/models/encoders/: encoders.py
pldm/objectives/: __init__.py  idm.py  prediction.py  vicreg.py
pldm/planning/: enums.py  mpc.py  objectives_v2.py  plotting.py
pldm/planning/d4rl/: __init__.py
pldm/planning/franka/: enums.py  mpc.py
pldm/planning/planners/: enums.py  mppi_planner.py  mppi_torch.py  sgd_planner.py
pldm/probing/: evaluator.py
pldm/wandb/: settings
pldm_envs/diverse_maze/: ant_draw.py  d4rl.py
pldm_envs/diverse_maze/configs/: 20maps_test.yaml  5maps.yaml
pldm_envs/diverse_maze/data_generation/: generate_all_datasets_og.sh  postprocess_images.py  render_data.py
pldm_envs/franka/: enums.py  envs.py  franka_dataset.py  utils.py
pldm_envs/franka/data/: franka_dataset.py
pldm_envs/franka/evaluation/: envs_generator.py
pldm_envs/utils/: normalizer.py
pldm_envs/wall/: wall.py
pldm_envs/wall/data/: dump_offline_data.py  offline_wall.py  single.py
pldm_envs/wall/presaved_datasets/: download_all.sh
robot_sim/: analyze_gen_data.py  config.yaml  gen_data.py  gen_data_xyz.py  make_video.py  robot_random.py
utils_env/: analyze_data.py  color_picker.py
(+8 files in other folders)
