[tool.black]
line-length = 88

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pldm"
version = "1.0.0"
requires-python = ">=3.10"
dynamic = ["description"]
packages = ["pldm", "pldm_envs"]
dependencies = [
    "arm-pytorch-utilities>=0.4.3",
    "cython==0.29.36",
    "d4rl>=1.1",
    "editdistance>=0.8.1",
    "gdown>=5.2.0",
    "gym<0.25.0",
    "gymnasium[mujoco]>=1.1.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "ipython>=8.12.3",
    "joblib>=1.4.2",
    "mujoco==3.3.0",
    "mujoco-py>=2.1.2.14",
    "mujoco-python-viewer>=0.1.4",
    "numpy>=1.24.4",
    "numpy-quaternion>=2023.0.3",
    "omegaconf>=2.3.0",
    "scipy>=1.15.2",
    "statsmodels>=0.14.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.33.0",
    "uvloop>=0.21.0",
    "wandb>=0.19.8",
    "zarr>=2.16.1",
]

[tool.ruff]
target-version = "py310"
line-length = 88

